# geoforge

./: .env.example  .gitignore  .pre-commit-config.yaml  .pymarkdown.toml  CLAUDE.md  README.md  pyproject.toml
assets/: Squares_rectangles_300_1.gds  Squares_rectangles_300_1.oas  Squares_rectangles_300_1.py  comb_serpentine.gds  comb_serpentine.oas  comb_serpentine.py  curved_trace_bundle.gds  curved_trace_bundle.oas  curved_trace_bundle.py  via_array_5x5.gds  via_array_5x5.oas  via_array_5x5.py
src/geoforge/: __init__.py  cli.py  config.py
src/geoforge/core/: __init__.py  logging.py  validator.py
src/geoforge/llm/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  registry.py
src/geoforge/prompts/: __init__.py  gdsfactory.py
src/geoforge/templates/: __init__.py  generators.py  registry.py
src/geoforge/viz/: __init__.py  renderer.py
src/geoforge/web/: __init__.py  app.py  handlers.py
tests/: __init__.py  conftest.py  mock_provider.py  test_cli.py  test_config.py  test_geometry.py  test_integration.py  test_llm.py  test_prompts.py  test_retry.py  test_spec_match.py  test_templates.py  test_validator.py  test_viz.py  test_web.py
